# maya-pixelstreaming-ue

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  README.md  cmake_install.cmake
.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
PixelStreamingDemo/: PixelStreamingDemo.uproject
PixelStreamingDemo/Config/: DefaultEngine.ini  DefaultGame.ini
PixelStreamingDemo/Source/: PixelStreamingDemo.Target.cs  PixelStreamingDemoEditor.Target.cs
PixelStreamingDemo/Source/PixelStreamingDemo/: PixelStreamingDemo.Build.cs  PixelStreamingDemo.cpp  PixelStreamingDemoCharacter.cpp  PixelStreamingDemoCharacter.h  PixelStreamingDemoGameMode.cpp  PixelStreamingDemoGameMode.h
cmake/: compiler_config.cmake  utils.cmake
cmake/modules/: FindMaya.cmake  FindUFE.cmake
include/mayaPixelStreaming/: renderOverride.h  viewCommand.h
lib/: CMakeLists.txt  cmake_install.cmake
lib/mayaPixelStreaming/: CMakeLists.txt  cmake_install.cmake  plugin.cpp  renderOverride.cpp  renderOverride.h  viewCommand.cpp  viewCommand.h
lib/mayaPixelStreaming/Debug/: mayaPixelStreaming.exp  mayaPixelStreaming.mll
lib/mayaPixelStreaming/mayaPixelStreaming.dir/Debug/: mayaPixelStreaming.ilk  mayaPixelStreaming.mll.recipe
lib/mayaPlugin/: CMakeLists.txt  cmake_install.cmake  renderOverride.cpp  renderOverride.h
modules/: mayaPixelStreaming_Win.mod.template  mayaUePixelStreaming_Win.mod.template  pixelStreamingUeMaya_Win.mod.template
scripts/: cmake_install.cmake
x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
